--- a/pages/19475.html
+++ b/pages/19475.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      graded modality in nLab
+      bounded linear logic in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      graded modality
+      bounded linear logic
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8639/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8642/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,28 +308,26 @@ margin-left: 0em;
 
 <div id="revision">
     <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <strong>graded modality</strong> is an indexed family of <a class='existingWikiWord' href='/nlab/show/modality'>modalities</a> with some additional <a class='existingWikiWord' href='/nlab/show/structure'>structure</a> on the indices which mirrors the structure of the axioms/proof rules.</p>
+<p>A kind of <a class='existingWikiWord' href='/nlab/show/linear+logic'>linear logic</a>.</p>
 
-<p>For example, the <a class='existingWikiWord' href='/nlab/show/%21-modality'>exponential modality</a> of <a class='existingWikiWord' href='/nlab/show/linear+logic'>linear logic</a> <math class='maruku-mathml' display='inline' id='mathml_ff57678294d64c4cdf0dd6c0c63af8cffdc6dde2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>!</mo></mrow><annotation encoding='application/x-tex'>!</annotation></semantics></math> has a graded counterpart in <a class='existingWikiWord' href='/nlab/show/bounded+linear+logic'>bounded linear logic</a>, where <math class='maruku-mathml' display='inline' id='mathml_ff57678294d64c4cdf0dd6c0c63af8cffdc6dde2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>!</mo></mrow><annotation encoding='application/x-tex'>!</annotation></semantics></math> is replaced with a family of modalities <math class='maruku-mathml' display='inline' id='mathml_ff57678294d64c4cdf0dd6c0c63af8cffdc6dde2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>!</mo> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>!_n</annotation></semantics></math> indexed by the natural numbers (the reuse bound).</p>
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/graded+modality'>graded modality</a></li>
+</ul>
 
 <h2 id='references'>References</h2>
 
 <ul>
-<li>Dominic Orchard, Vilem-Benjamin Liepelt, <em>Gram: A linear functional language with graded modal types</em>, (<a href='https://www.cs.ox.ac.uk/conferences/fscd2017/preproceedings_unprotected/TLLA_Orchard.pdf'>extended abstract</a>)</li>
-</ul>
-
-<p>For discussion <a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a> and linguistics, see</p>
-
-<ul>
 <li>
-<p>Patrick Grosz, <em>Grading Modality: A New Approach to Modal Concord and its Relatives</em>, (<a href='https://www.univie.ac.at/sub14/proc/grosz.pdf'>paper</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Jean-Yves+Girard'>Jean-Yves Girard</a>, <a class='existingWikiWord' href='/nlab/show/Andre+Scedrov'>Andre Scedrov</a>, Philip J.Scott, <em>Bounded linear logic: a modular approach to polynomial-time computability</em>, Theoretical Computer Science Volume 97, Issue 1, 20 April 1992, Pages 1-66 (<a href='https://doi.org/10.1016/0304-3975(92)90386-T'>doi:10.1016/0304-3975(92)90386-T</a>)</p>
 </li>
 
 <li>
-<p>Daniel Lassiter, <em>Graded modality</em>, (<a href='https://web.stanford.edu/~danlass/Lassiter-graded-modality-draft.pdf'>paper</a>)</p>
+<p>Ugo Dal Lago, <a class='existingWikiWord' href='/nlab/show/Martin+Hofmann'>Martin Hofmann</a>, <em>Bounded Linear Logic, Revisited</em>, Logical Methods in Computer Science, Volume 6, Issue 4 (December 18, 2010) lmcs:1064 (<a href='https://arxiv.org/abs/0904.2675'>arXiv:0904.2675</a>)</p>
 </li>
 </ul>
 
@@ -339,22 +337,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on June 20, 2018 at 06:49:05.
-  See the <a href="https://ncatlab.org/nlab/history/graded modality" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on June 20, 2018 at 06:53:57.
+  See the <a href="https://ncatlab.org/nlab/history/bounded linear logic" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/graded+modality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/graded+modality/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/graded+modality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/graded+modality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/graded modality/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/bounded+linear+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/bounded linear logic/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/graded+modality" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/bounded+linear+logic" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/graded+modality" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/bounded+linear+logic" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/graded+modality" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/bounded+linear+logic" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
