--- a/pages/19476.html
+++ b/pages/19476.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      graded modality in nLab
+      Andre Scedrov in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      graded modality
+      Andre Scedrov
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8639/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8643/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -307,54 +307,37 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>A <strong>graded modality</strong> is an indexed family of <a class='existingWikiWord' href='/nlab/show/modality'>modalities</a> with some additional <a class='existingWikiWord' href='/nlab/show/structure'>structure</a> on the indices which mirrors the structure of the axioms/proof rules.</p>
-
-<p>For example, the <a class='existingWikiWord' href='/nlab/show/%21-modality'>exponential modality</a> of <a class='existingWikiWord' href='/nlab/show/linear+logic'>linear logic</a> <math class='maruku-mathml' display='inline' id='mathml_ff57678294d64c4cdf0dd6c0c63af8cffdc6dde2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>!</mo></mrow><annotation encoding='application/x-tex'>!</annotation></semantics></math> has a graded counterpart in <a class='existingWikiWord' href='/nlab/show/bounded+linear+logic'>bounded linear logic</a>, where <math class='maruku-mathml' display='inline' id='mathml_ff57678294d64c4cdf0dd6c0c63af8cffdc6dde2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>!</mo></mrow><annotation encoding='application/x-tex'>!</annotation></semantics></math> is replaced with a family of modalities <math class='maruku-mathml' display='inline' id='mathml_ff57678294d64c4cdf0dd6c0c63af8cffdc6dde2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>!</mo> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>!_n</annotation></semantics></math> indexed by the natural numbers (the reuse bound).</p>
-
-<h2 id='references'>References</h2>
-
-<ul>
-<li>Dominic Orchard, Vilem-Benjamin Liepelt, <em>Gram: A linear functional language with graded modal types</em>, (<a href='https://www.cs.ox.ac.uk/conferences/fscd2017/preproceedings_unprotected/TLLA_Orchard.pdf'>extended abstract</a>)</li>
+    <ul>
+<li><a href='https://www.math.upenn.edu/people/andre-scedrov'>webpage</a></li>
 </ul>
 
-<p>For discussion <a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a> and linguistics, see</p>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_3a07f603125584a6a7e1bd9fb1f925081c132f90_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>
-<p>Patrick Grosz, <em>Grading Modality: A New Approach to Modal Concord and its Relatives</em>, (<a href='https://www.univie.ac.at/sub14/proc/grosz.pdf'>paper</a>)</p>
-</li>
-
-<li>
-<p>Daniel Lassiter, <em>Graded modality</em>, (<a href='https://web.stanford.edu/~danlass/Lassiter-graded-modality-draft.pdf'>paper</a>)</p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/graded+modality'>graded modality</a></li>
 </ul>
 
-<p>
-</p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on June 20, 2018 at 06:49:05.
-  See the <a href="https://ncatlab.org/nlab/history/graded modality" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on June 20, 2018 at 06:55:33.
+  See the <a href="https://ncatlab.org/nlab/history/Andre Scedrov" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/graded+modality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/graded+modality/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/graded+modality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/graded+modality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/graded modality/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Andre+Scedrov" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Andre Scedrov/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/graded+modality" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Andre+Scedrov" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/graded+modality" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Andre+Scedrov" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/graded+modality" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Andre+Scedrov" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
