--- a/pages/15854.html
+++ b/pages/15854.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -320,7 +319,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Fredholm+determinant'>Fredholm determinant</a>, <a class='existingWikiWord' href='/nlab/show/random+matrix'>random matrix theory</a>, <span class='newWikiWord'>determinantal process<a href='/nlab/new/determinantal+process'>?</a></span>, <span class='newWikiWord'>Kontsevich matrix model<a href='/nlab/new/Kontsevich+matrix+model'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/large+N+limit'>large N limit</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Fredholm+determinant'>Fredholm determinant</a>, <a class='existingWikiWord' href='/nlab/show/random+matrix'>random matrix theory</a>, <span class='newWikiWord'>determinental process<a href='/nlab/new/determinental+process'>?</a></span>, <span class='newWikiWord'>Kontsevich matrix model<a href='/nlab/new/Kontsevich+matrix+model'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/large+N+limit'>large N limit</a></p>
 </li>
 
 <li>
@@ -349,19 +348,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 20, 2017 17:49:59 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.50.90)
+  <p>
+  Last revised on June 20, 2018 at 07:53:27.
+  See the <a href="https://ncatlab.org/nlab/history/matrix model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/matrix+model/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/matrix+model/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/matrix model/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/matrix+model" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/matrix+model" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/matrix+model" id="view_source" rel="nofollow">Source</a>
