--- a/pages/10801.html
+++ b/pages/10801.html
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8641/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8641/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -509,25 +509,29 @@ margin-left: 0em;
 
 <ul>
 <li id='LeStum12'>
-<p><a class='existingWikiWord' href='/nlab/show/Bernard+Le+Stum'>Bernard Le Stum</a>, <em>One century of <math class='maruku-mathml' display='inline' id='mathml_1b6be8a99aaa00d814f04d920b3d2e052fcd6a06_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-adic geometry – From Hensel to Berkovich and beyond</em>, talk notes, June 2012 (<a href='http://www-irma.u-strasbg.fr/IMG/pdf/NotesCoursLeStum.pdf'>pdf</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Bernard+Le+Stum'>Bernard Le Stum</a>, <em>One century of <math class='maruku-mathml' display='inline' id='mathml_77b3377faea544a540e0e1d5c14962fff73513ce_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-adic geometry – From Hensel to Berkovich and beyond</em>, talk notes, June 2012 (<a href='http://www-irma.u-strasbg.fr/IMG/pdf/NotesCoursLeStum.pdf'>pdf</a>)</p>
 </li>
 
 <li id='Scholze17'>
-<p><a class='existingWikiWord' href='/nlab/show/Peter+Scholze'>Peter Scholze</a>, <em><math class='maruku-mathml' display='inline' id='mathml_1b6be8a99aaa00d814f04d920b3d2e052fcd6a06_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-adic geometry</em>, ICM report (<a href='https://arxiv.org/abs/1712.03708'>arXiv:1712.03708</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Peter+Scholze'>Peter Scholze</a>, <em><math class='maruku-mathml' display='inline' id='mathml_77b3377faea544a540e0e1d5c14962fff73513ce_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-adic geometry</em>, ICM report (<a href='https://arxiv.org/abs/1712.03708'>arXiv:1712.03708</a>)</p>
+</li>
+
+<li id='ScholzeLectures14'>
+<p><a class='existingWikiWord' href='/nlab/show/Peter+Scholze'>Peter Scholze</a>, <a class='existingWikiWord' href='/nlab/show/Jared+Weinstein'>Jared Weinstein</a>, <em>Berkeley lectures on <math class='maruku-mathml' display='inline' id='mathml_77b3377faea544a540e0e1d5c14962fff73513ce_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-adic geometry</em>, <a href='http://www.math.uni-bonn.de/people/scholze/Berkeley.pdf'>pdf</a>.</p>
 </li>
 </ul>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on June 20, 2018 at 06:45:00.
+  Last revised on June 20, 2018 at 12:14:41.
   See the <a href="https://ncatlab.org/nlab/history/p-adic geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/p-adic+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/p-adic+geometry/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/p-adic+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/p-adic+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/p-adic+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/p-adic+geometry/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/p-adic+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/p-adic+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/p-adic geometry/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
